[tool.poetry]
name = "bigiftree"
version = "0.1.0"
description = "Multi-agent LLM Taxonomy Builder"
authors = ["Goutham <goutham794@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
openai = "^1.55.0"
polars = "^1.14.0"
ipykernel = "^6.29.5"
jinja2 = "^3.1.4"
loguru = "^0.7.2"
anthropic = "^0.39.0"
litellm = "^1.52.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
